# drpo

./: .e8-alpha1-registration-trigger  .e8_registration_materialized.patch.gz.b64  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PR272_PROTOCOL_PDF_TRIGGER.txt  README.md  REGEN_TASK.md  agent.md  maintenance.patch  pyproject.toml
.github/: bootstrap_stage5_merge_history.py  countdown_closure_payload.b64  import-revised-overleaf.trigger  repair-fable-vfinal3-release.sh
.tmp/: apply_e7_docs.py  ci-refresh-asymre-closure.txt  e7_docs_source_export_trigger.txt  e8_asymre_boundary_dense_apply.sh  e8_dense_trigger  p1_patch_00.b64  p1_patch_01.b64  p1_patch_02.b64  p1_patch_03.b64  p1_patch_04.b64  p1_patch_05.b64  p2_apply.py  p2_apply_retry_02.txt
configs/: countdown_e8_base_rl_replay_0p5b.yaml  countdown_e8_base_rl_replay_3b.yaml  countdown_e8_drpo_ctau_scale_transfer_3b.yaml  countdown_e8_onpolicy_0p5b_unpolished.yaml  countdown_e8_onpolicy_capacity_diag_0p5b.yaml  countdown_e8_oracle_offline_bank_v2_0p5b.yaml  (+61 more)
paper_code/: README.md  pyproject.toml
paper_code/configs/: countdown_e8_taper_0p5b.json
paper_code/src/drpo_reference/: __init__.py  cli.py
paper_code/src/drpo_reference/categorical/: __init__.py  countdown.py  du1_controls.py  du1_environment.py  du1_metrics.py  du1_policy.py  du1_protocol.py  du1_public.py  du1_reports.py  du1_suite.py  du1_training.py
paper_code/src/drpo_reference/common/: __init__.py  aggregate.py  events.py  io.py  seeding.py
paper_code/src/drpo_reference/continuous/: __init__.py  cu1.py  cu1_artifacts.py  cu1_control.py  cu1_mechanism.py  cu1_phase.py  cu1_phase_taper.py  cu1_public_audit.py  cu1_public_protocol.py  cu1_source_causal.py  cu1_suite.py  cu1_taper.py  cu1_training.py  gaussian.py
paper_code/src/drpo_reference/controls/: __init__.py  budget.py  selection.py  weights.py
paper_code/src/drpo_reference/experiments/: __init__.py  countdown.py  countdown_runtime.py  d4rl.py  hopper.py
paper_code/tests/: conftest.py  du1_helpers.py  test_aggregate.py  test_cli.py  test_common.py  test_controls.py  test_countdown_release.py  test_cu1_differential.py  test_cu1_mechanism_differential.py  test_cu1_phase_differential.py  test_cu1_positive_training.py  test_cu1_suite.py  test_cu1_taper_differential.py  test_d4rl_shared_core_differential.py  test_du1_cli.py  test_du1_controls_differential.py  test_du1_environment_differential.py  test_du1_public.py  test_du1_training_differential.py  test_du1_update_differential.py  test_events.py  test_hopper_actor_differential.py  test_hopper_critic_differential.py  test_hopper_data_differential.py  test_hopper_metrics_differential.py  test_hopper_models_differential.py  test_hopper_public_differential.py  test_hopper_rollout_differential.py  test_hopper_suite_differential.py
(+1974 files in other folders)
