[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drpo"
version = "0.1.0"
description = "DRPO research code for offline reinforcement learning experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "gymnasium",
  "minari",
  "h5py",
  "matplotlib",
  "pyyaml",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
