[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drpo-reference"
version = "0.1.0"
description = "Paper-facing reference implementation for DRPO experiments"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "torch>=2.0"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
drpo-reference = "drpo_reference.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
