[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drpo-reference"
version = "0.1.0"
description = "Paper-facing reference implementation for DRPO experiments"
requires-python = ">=3.10"
dependencies = ["h5py>=3.8", "numpy>=1.24", "torch>=2.0"]

[project.optional-dependencies]
test = ["pytest>=8"]
rollout = ["gymnasium[mujoco]>=1.2,<1.4"]
countdown = [
  "accelerate>=1.0",
  "peft>=0.13",
  "sentencepiece>=0.2",
  "transformers>=4.45",
]
countdown-4bit = [
  "accelerate>=1.0",
  "bitsandbytes>=0.43",
  "peft>=0.13",
  "sentencepiece>=0.2",
  "transformers>=4.45",
]

[project.scripts]
drpo-reference = "drpo_reference.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"